--- a/Vue/store_detail.html
+++ b/Vue/store_detail.html
@@ -290,7 +290,7 @@
 						.finally(()=>this.loading = false)
 						
 					axios
-						.get("http://127.0.0.1:7771/review/findScore_avgByStoreId/"+$.urlParam('store_id'))
+						.put("http://127.0.0.1:7771/review/findScore_avgByStoreId/"+$.urlParam('store_id'))
 						.then(response=>(this.aa = response.data))
 						.catch(error=>{
 						    console.log(error);
