--- a/Vue/myBestStore.html
+++ b/Vue/myBestStore.html
@@ -135,7 +135,7 @@
             <div class="mid">
                 <div class="header_bottom">
                     <h1>솔직한 리뷰, 믿을 수 없는 평점!</h1>
-                    <h2>망고 플레이트</h2>
+                    <h2>엔코아 플레이트</h2>
                 </div>
                 <div class="list">
                     <h2 style="margin-top: 30px; font-size: 20px; text-align: center;">내 맛집 리스트</h2>
